--- a/package.json
+++ b/package.json
@@ -20,13 +20,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.15",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.1",
+    "chai": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "mocha": "^8.3.0",
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "bitcoinjs-lib": "^5.2.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
