--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "bip32": "^2.0.6",
+    "bip39": "^3.0.3",
     "bitcoinjs-lib": "^5.2.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
