--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Crypto.com Wallets API",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "start": "node dist/index.js",
     "dev": "tsc -w & nodemon dist/index.js"
   },
@@ -23,10 +24,13 @@
     "@types/chai": "^4.2.15",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/mocha": "^8.2.1",
     "chai": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "jest": "^26.6.3",
     "mocha": "^8.3.0",
+    "ts-jest": "^26.5.2",
     "typescript": "^4.1.5"
   },
   "dependencies": {
